docs: update old javadoc